--- a/views/admin/addproduct.ejs
+++ b/views/admin/addproduct.ejs
@@ -127,8 +127,7 @@
                               <label for="image1">Image 1:</label>
                               <input type="file" name="image1" class="form-control imageInput" id="imageInput"
                                 accept="image/*" />
-                              <img src="" alt="Image 1" class="img-fluid imageInput"
-                                style="max-height: 50px;width: auto; display: none;">
+                                <img src="" alt="Image 1" class="img-fluid imagePreview" style="max-height: 50px;width: auto; display: none;">
                             </div>
                             <div id="fileError"></div>
 
@@ -137,8 +136,7 @@
                               <label for="image2">Image 2:</label>
                               <input type="file" name="image2" class="form-control imageInput" id="image2"
                                 accept="image/*" />
-                              <img src="" alt="Image 2" class="img-fluid imageInput"
-                                style="max-height: 50px;width: auto; display: none;" id="previewImage2">
+                                <img src="" alt="Image 2" class="img-fluid imagePreview" style="max-height: 50px;width: auto; display: none;">
                             </div>
 
 
@@ -146,8 +144,7 @@
                               <label for="image3">Image 3:</label>
                               <input type="file" name="image3" class="form-control imageInput" id="image3"
                                 accept="image/*" />
-                              <img src="" alt="Image 3" class="img-fluid imageInput"
-                                style="max-height: 50px;width: auto; display: none;" id="previewImage3">
+                                <img src="" alt="Image 3" class="img-fluid imagePreview" style="max-height: 50px;width: auto; display: none;">
                             </div>
                           </div>
 
@@ -368,6 +365,31 @@
   // Attach event listener to the form submit event
   const form = document.getElementById('myForm');
   form.addEventListener('submit', formSubmitted);
+
+
+  // Function to handle image preview
+  const imageInput = document.querySelectorAll('.imageInput');
+  const imagePreview = document.querySelectorAll('.imagePreview');
+
+  imageInput.forEach((input, index) => {
+    input.addEventListener('change', function () {
+      const file = input.files[0];
+
+      if (file) {
+        const reader = new FileReader();
+
+        reader.onload = function (e) {
+          imagePreview[index].src = e.target.result;
+          imagePreview[index].style.display = 'block';
+        };
+
+        reader.readAsDataURL(file);
+      } else {
+        imagePreview[index].src = '';
+        imagePreview[index].style.display = 'none';
+      }
+    });
+  });
 
   </script>
         
