--- a/views/user/userlog.ejs
+++ b/views/user/userlog.ejs
@@ -11,10 +11,10 @@
       <div class="form-style">
         <form action="/login" method="post">
           <div class="form-group pb-3">
-            <input type="email" name="email" placeholder="Email" value="" class="form-control"  id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="email" name="email" placeholder="Email" value="nilu@gmail.com" class="form-control"  id="exampleInputEmail1" aria-describedby="emailHelp">
           </div>
           <div class="form-group pb-3">
-            <input type="password" name="password" value="" placeholder="Password" class="form-control" id="exampleInputPassword1">
+            <input type="password" name="password" value="Nilu@1234" placeholder="Password" class="form-control" id="exampleInputPassword1">
           </div>
           <div class="d-flex align-items-center justify-content-between">
             <!-- <div class="d-flex align-items-center">
